# image2mcq

./: LICENSE  README.md  pyproject.toml
image2mcq/: __init__.py  cli.py  generator.py  image_ocr.py  models.py  prompts.py
tests/: test_image2mcq.py
